# python-docker-project

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: entry  tests
src/app/: config.py  main.py
tests/: test_main.py
